task2/01-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api
  namespace: task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lapi
  template:
    metadata:
      labels:
        app: lapi
    spec:
      containers:
      - name: dev
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
        # env:                           
          # - name: HTTP_PORT
          #   value: "8080"              # tune multitool to listen on 8080
          # - name: HTTPS_PORT
          #   value: "8443"              #  HTTPS
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
