task2/01-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  namespace: task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lweb
  template:
    metadata:
      labels:
        app: lweb
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
