task2/02-service-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: task2
spec:
  type: ClusterIP
  selector:
    app: lapi
  ports:
    - name: dev
      port: 80
      targetPort: 80
