task2/02-service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: task2
spec:
  type: ClusterIP
  selector:
    app: lweb
  ports:
    - name: web
      port: 80
      targetPort: 80
